# Guigine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-build.txt  requirements.txt
examples/: __init__.py  basic_scene.py  run_examples.py  shared_assets.py  splash_scene.py  tmx_scene.py  widgets_only_scene.py
examples/recipes/: README.md
guigine/: __init__.py  __main__.py  cli.py
guigine/app/: app.py  config.py  context.py  scene_manager.py
guigine/components/: __init__.py  always_on_top.py  animation.py  area_trigger.py  base.py  collider.py  depth_anchor.py  dynamic_collision.py  light.py  move_speed_modifier.py  path_follower.py  render_layer.py  sprite.py  team.py
guigine/ecs/: __init__.py  core.py  entity_manager.py
guigine/managers/: __init__.py  audio_manager.py  event_manager.py  input_manager.py  music_manager.py  time_manager.py  ui_manager.py
guigine/map/: __init__.py  map_entity_spawner.py  map_renderer.py  tile_map.py  tile_map_loader.py
guigine/render/: camera.py  rect_renderer.py
guigine/resources/: __init__.py  resource_manager.py
guigine/scene/: __init__.py  base_scene.py
guigine/systems/: __init__.py  animation.py  area_trigger.py  freeze.py  light.py  path_following.py  physics.py  render.py
guigine/utils/: navigation.py  spatial_hash.py
guigine/widgets/: __init__.py  button.py  clock.py  fps.py  (+4 more)
tests/: __init__.py  _test_env.py  test_cli.py  test_entity_manager.py  test_map_entity_spawner.py  test_physics_system.py  test_resource_manager.py  test_scene_manager.py  test_tile_map_loader.py  test_widgets.py
(+4 files in other folders)
